--- a/ex1.ipynb
+++ b/ex1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "118ec167-c590-4827-871c-c07be6647eb3",
    "metadata": {},
    "outputs": [],
@@ -10,8 +10,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import datetime\n",
-    "import networkx as nx\n",
-    "from tqdm import tqdm"
+    "import networkx as nx"
    ]
   },
   {
@@ -24,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "ff430917-5fba-4901-8e1e-4a29a3ca6826",
    "metadata": {},
    "outputs": [],
@@ -40,31 +39,24 @@
    "id": "4850396a-52d5-4cd9-9665-741bbdfb32cd",
    "metadata": {},
    "source": [
-    "Let's just take the data from the first half of 2009."
+    "If you wanna work on a smaller range of time use the code below. For example let's just take the data from 2010."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "44cc8bf6-9d92-42fc-bc18-c1d2452a8a04",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create timestamps for the first day of 2009 and the last day of June 2009\n",
+    "#create timestamps for the first and last days of 2010\n",
     "import time\n",
-    "start = '01/01/2009'\n",
-    "end = '30/06/2009'\n",
+    "start = '01/01/2010'\n",
+    "end = '31/12/2010'\n",
     "start = int(time.mktime(datetime.datetime.strptime(start, \"%d/%m/%Y\").timetuple()))\n",
-    "end = int(time.mktime(datetime.datetime.strptime(end, \"%d/%m/%Y\").timetuple()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08ac4615-aeee-43eb-bd4c-878bf2fd9735",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "end = int(time.mktime(datetime.datetime.strptime(end, \"%d/%m/%Y\").timetuple()))\n",
+    "\n",
+    "\n",
     "#take only data from the first half of 2009\n",
     "answers_to_questions = answers_to_questions[(answers_to_questions.time >= start) & (answers_to_questions.time <= end)]\n",
     "comments_to_answers = comments_to_answers[(comments_to_answers.time >= start) & (comments_to_answers.time <= end)]\n",
@@ -76,61 +68,284 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4acfcb9d-810a-43fc-9d92-57626efc8127",
+   "metadata": {},
+   "source": [
+    "Let's deal with dates!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d5786b2-4ae4-4388-aec9-26727ee5251a",
+   "execution_count": 54,
+   "id": "dc073841-3764-4d20-9ce6-2f6c2eebe162",
    "metadata": {},
    "outputs": [],
    "source": [
     "#convert timestamps\n",
-    "for i in tqdm(range(len(answers_to_questions))):\n",
-    "    answers_to_questions.time[i] = datetime.datetime.fromtimestamp(answers_to_questions.time[i]).strftime('%d, %m, %Y')\n",
-    "    \n",
-    "for i in tqdm(range(len(comments_to_answers))):\n",
-    "    comments_to_answers.time[i] = datetime.datetime.fromtimestamp(comments_to_answers.time[i]).strftime('%d, %m, %Y')\n",
-    "    \n",
-    "for i in tqdm(range(len(comments_to_questions))):\n",
-    "    comments_to_questions.time[i] = datetime.datetime.fromtimestamp(comments_to_questions.time[i]).strftime('%d, %m, %Y')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de7c1860-bdc2-4c3b-aa67-c7ad7b8f5ee4",
-   "metadata": {},
-   "source": [
-    "Let's create csv files for each graph in order to never run the previous code again."
+    "answers_to_questions['time'] = answers_to_questions['time'].apply(datetime.datetime.fromtimestamp).astype(str)\n",
+    "comments_to_answers['time'] = comments_to_answers['time'].apply(datetime.datetime.fromtimestamp).astype(str)\n",
+    "comments_to_questions['time'] = comments_to_questions['time'].apply(datetime.datetime.fromtimestamp).astype(str)\n",
+    "\n",
+    "#let's just take year, month, day (in this order)\n",
+    "answers_to_questions['time'] = answers_to_questions['time'].str[:10]\n",
+    "comments_to_answers['time'] = comments_to_answers['time'].str[:10]\n",
+    "comments_to_questions['time'] = comments_to_questions['time'].str[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b4c17f8d-b8c6-465f-8087-3bd3a3ad84e2",
+   "execution_count": 66,
+   "id": "9f5ae2de-1dd7-4afc-b70d-c75b42a533a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>from</th>\n",
+       "      <th>to</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2008-08-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2008-08-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2008-08-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2008-08-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>48</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2008-08-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   from  to        time\n",
+       "0     9   8  2008-08-01\n",
+       "1     1   1  2008-08-01\n",
+       "2    13   1  2008-08-01\n",
+       "3    17   1  2008-08-01\n",
+       "4    48   2  2008-08-01"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "answers_to_questions.to_csv('answers_to_questions.csv', index = False)\n",
-    "comments_to_answers.to_csv('comments_to_answers.csv', index = False)\n",
-    "comments_to_questions.to_csv('comments_to_questions.csv', index = False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aaa4f457-650c-42be-be48-e8a8baba40b5",
-   "metadata": {},
-   "source": [
-    "Read the data!"
+    "answers_to_questions.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f017cefa-845f-4ae8-8abe-7f53b4af7524",
+   "execution_count": 56,
+   "id": "0cfdc12a-b369-46b3-a2fb-80bf630f0ef7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>from</th>\n",
+       "      <th>to</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>91</td>\n",
+       "      <td>2008-09-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>91</td>\n",
+       "      <td>2008-09-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>380</td>\n",
+       "      <td>350</td>\n",
+       "      <td>2008-09-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4642</td>\n",
+       "      <td>2257</td>\n",
+       "      <td>2008-09-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4642</td>\n",
+       "      <td>1324220</td>\n",
+       "      <td>2008-09-06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   from       to        time\n",
+       "0     1       91  2008-09-06\n",
+       "1     3       91  2008-09-06\n",
+       "2   380      350  2008-09-06\n",
+       "3  4642     2257  2008-09-06\n",
+       "4  4642  1324220  2008-09-06"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "answers_to_questions = pd.read_csv('answers_to_questions.csv')\n",
-    "comments_to_answers = pd.read_csv('comments_to_answers.csv')\n",
-    "comments_to_questions = pd.read_csv('comments_to_questions.csv')"
+    "comments_to_answers.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "f544f296-5a08-49df-ba83-fe15fabb8085",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>from</th>\n",
+       "      <th>to</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4550</td>\n",
+       "      <td>4550</td>\n",
+       "      <td>2008-09-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>242</td>\n",
+       "      <td>184</td>\n",
+       "      <td>2008-09-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4213</td>\n",
+       "      <td>4946</td>\n",
+       "      <td>2008-09-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>91</td>\n",
+       "      <td>91</td>\n",
+       "      <td>2008-09-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2658</td>\n",
+       "      <td>1874</td>\n",
+       "      <td>2008-09-07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   from    to        time\n",
+       "0  4550  4550  2008-09-06\n",
+       "1   242   184  2008-09-06\n",
+       "2  4213  4946  2008-09-07\n",
+       "3    91    91  2008-09-07\n",
+       "4  2658  1874  2008-09-07"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comments_to_questions.head()"
    ]
   },
   {
@@ -154,7 +369,7 @@
    "source": [
     "answers_to_questions_graph = {}\n",
     "\n",
-    "for i in tqdm(range(len(answers_to_questions))):\n",
+    "for i in range(len(answers_to_questions)):\n",
     "    if answers_to_questions['from'][i] not in answers_to_questions_graph:\n",
     "        answers_to_questions_graph[answers_to_questions['from'][i]] = []\n",
     "    answers_to_questions_graph[answers_to_questions['from'][i]].append((answers_to_questions.to[i], answers_to_questions.time[i]))\n",
@@ -178,7 +393,7 @@
    "source": [
     "comments_to_answers_graph = {}\n",
     "\n",
-    "for i in tqdm(range(len(comments_to_answers))):\n",
+    "for i in range(len(comments_to_answers)):\n",
     "    if comments_to_answers['from'][i] not in comments_to_answers_graph:\n",
     "        comments_to_answers_graph[comments_to_answers['from'][i]] = []\n",
     "    comments_to_answers_graph[comments_to_answers['from'][i]].append((comments_to_answers.to[i], comments_to_answers.time[i]))\n",
@@ -202,7 +417,7 @@
    "source": [
     "comments_to_questions_graph = {}\n",
     "\n",
-    "for i in tqdm(range(len(comments_to_questions))):\n",
+    "for i in range(len(comments_to_questions)):\n",
     "    if comments_to_questions['from'][i] not in comments_to_questions_graph:\n",
     "        comments_to_questions_graph[comments_to_questions['from'][i]] = []\n",
     "    comments_to_questions_graph[comments_to_questions['from'][i]].append((comments_to_questions.to[i], comments_to_questions.time[i]))\n",
@@ -226,17 +441,17 @@
    "source": [
     "graph = {}\n",
     "\n",
-    "for i in tqdm(range(len(answers_to_questions))):\n",
+    "for i in range(len(answers_to_questions)):\n",
     "    if answers_to_questions['from'][i] not in graph:\n",
     "        graph[answers_to_questions['from'][i]] = []\n",
     "    graph[answers_to_questions['from'][i]].append((answers_to_questions.to[i], answers_to_questions.time[i]))\n",
     "    \n",
-    "for i in tqdm(range(len(comments_to_answers))):\n",
+    "for i in range(len(comments_to_answers)):\n",
     "    if comments_to_answers['from'][i] not in graph:\n",
     "        graph[comments_to_answers['from'][i]] = []\n",
     "    graph[comments_to_answers['from'][i]].append((comments_to_answers.to[i], comments_to_answers.time[i]))\n",
     "    \n",
-    "for i in tqdm(range(len(comments_to_questions))):\n",
+    "for i in range(len(comments_to_questions)):\n",
     "    if comments_to_questions['from'][i] not in graph:\n",
     "        graph[comments_to_questions['from'][i]] = []\n",
     "    graph[comments_to_questions['from'][i]].append((comments_to_questions.to[i], comments_to_questions.time[i]))\n",
@@ -251,24 +466,6 @@
     "        supp[graph[key][i][0]].append(graph[key][i][1])\n",
     "    graph[key] = supp"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50d42465-955a-4370-9f68-ffa038bfbe89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "comments_to_answers_graph[3381]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe1cf9e9-3d13-47aa-96d5-108f604b3cf1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
