--- a/ex1_2.ipynb
+++ b/ex1_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "118ec167-c590-4827-871c-c07be6647eb3",
    "metadata": {},
    "outputs": [],
@@ -495,7 +495,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
+   "id": "e917569d-14a0-47c1-bcfc-ee49571c3f7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "7e81dca6-c60c-487b-9fe5-929f0209faea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def directed(a_graph):\n",
+    "    for key in a_graph.keys():\n",
+    "        for key_ in a_graph[key].keys():\n",
+    "            if key_ not in a_graph.keys():\n",
+    "                return('directed')\n",
+    "            if key not in a_graph[key_].keys():\n",
+    "                return('directed')\n",
+    "            if Counter(a_graph[key][key_]) != Counter(a_graph[key_][key]):\n",
+    "                return('directed')\n",
+    "    return('undirected')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "id": "bb4550bb-b5e9-475c-be77-35083d977c5c",
    "metadata": {},
    "outputs": [],
@@ -511,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 63,
    "id": "9498de0c-67df-4e24-b037-13479843fd0f",
    "metadata": {},
    "outputs": [],
@@ -526,8 +555,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "id": "d271fef6-e08e-4994-b7be-d7a38ed75892",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def avg_n_links(a_graph):\n",
+    "        return(n_answers_comments(a_graph)/n_users(a_graph))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "9709003f-8266-435a-9051-c3673bd59940",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def density(a_graph):\n",
+    "    n = n_users(a_graph)\n",
+    "    return(n_answers_comments(a_graph)/(n*(n-1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "fff9ecd1-b722-4939-9e3e-a215d101925c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sparse(a_graph):\n",
+    "    if density(a_graph) < 0.7:\n",
+    "        return('sparse')\n",
+    "    else:\n",
+    "        return('dense')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "58507767-e78e-42a0-8c37-369aa47a25a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Functionality_1(a_graph):\n",
+    "   \n",
+    "    return({'directed': directed(a_graph), 'n_users': n_users(a_graph), 'n_answers_comments': n_answers_comments(a_graph),\n",
+    "           'avg_n_links': avg_n_links(a_graph), 'density': density(a_graph), 'sparse': sparse(a_graph)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "94a74e4b-2ec8-459a-be37-2ade7a368ffd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'directed': 'directed',\n",
+       " 'n_users': 228025,\n",
+       " 'n_answers_comments': 3940853,\n",
+       " 'avg_n_links': 17.28254796623177,\n",
+       " 'density': 7.579267079882719e-05,\n",
+       " 'sparse': 'sparse'}"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Functionality_1(graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5094ae96-f61a-4cbb-950f-82a7c4ca717f",
+   "id": "99f9c1de-59be-44a4-a8d4-ba71e6ef9dec",
    "metadata": {},
    "outputs": [],
    "source": []
