--- a/ex1_2.ipynb
+++ b/ex1_2.ipynb
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "e917569d-14a0-47c1-bcfc-ee49571c3f7c",
    "metadata": {},
    "outputs": [],
@@ -505,12 +505,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 30,
    "id": "7e81dca6-c60c-487b-9fe5-929f0209faea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def directed(a_graph):\n",
+    "def directed(a_graph):                          #most likely it will always be directed....\n",
     "    for key in a_graph.keys():\n",
     "        for key_ in a_graph[key].keys():\n",
     "            if key_ not in a_graph.keys():\n",
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 31,
    "id": "bb4550bb-b5e9-475c-be77-35083d977c5c",
    "metadata": {},
    "outputs": [],
@@ -540,45 +540,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 32,
    "id": "9498de0c-67df-4e24-b037-13479843fd0f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def n_answers_comments(a_graph):\n",
+    "def n_answers_comments(a_graph):     #equal number of links*weight(len of the list)\n",
     "    n = 0\n",
     "    for key in a_graph.keys():\n",
     "        for key_ in a_graph[key].keys():\n",
     "            n = n + len(a_graph[key][key_])\n",
-    "    return(n)"
+    "    if directed(a_graph) == 'directed':\n",
+    "        return(n)\n",
+    "    else:\n",
+    "        return(n/2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 33,
    "id": "d271fef6-e08e-4994-b7be-d7a38ed75892",
    "metadata": {},
    "outputs": [],
    "source": [
     "def avg_n_links(a_graph):\n",
-    "        return(n_answers_comments(a_graph)/n_users(a_graph))"
+    "    if directed(a_graph) == 'directed':\n",
+    "        return(n_answers_comments(a_graph)/n_users(a_graph))\n",
+    "    else:\n",
+    "        return(2*n_answers_comments(a_graph)/n_users(a_graph))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 34,
    "id": "9709003f-8266-435a-9051-c3673bd59940",
    "metadata": {},
    "outputs": [],
    "source": [
     "def density(a_graph):\n",
     "    n = n_users(a_graph)\n",
-    "    return(n_answers_comments(a_graph)/(n*(n-1)))"
+    "    if directed(a_graph) == 'directed':\n",
+    "        return(n_answers_comments(a_graph)/(n*(n-1)))\n",
+    "    else:\n",
+    "        return(2*n_answers_comments(a_graph)/(n*(n-1)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 35,
    "id": "fff9ecd1-b722-4939-9e3e-a215d101925c",
    "metadata": {},
    "outputs": [],
@@ -592,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 36,
    "id": "58507767-e78e-42a0-8c37-369aa47a25a5",
    "metadata": {},
    "outputs": [],
@@ -605,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 37,
    "id": "94a74e4b-2ec8-459a-be37-2ade7a368ffd",
    "metadata": {},
    "outputs": [
@@ -620,7 +629,7 @@
        " 'sparse': 'sparse'}"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
